--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "three": "^0.177.0"
   },
   "devDependencies": {
